--- a/styles/globals.css
+++ b/styles/globals.css
@@ -58,6 +58,11 @@ padding: 5%;
   transition: 1s ease-in-out;
 }
 
+.card a{
+  margin: auto;
+  display: block;
+}
+
 .card img:hover {
   transform: rotate(360deg);
 }
@@ -94,11 +99,11 @@ padding: 5%;
   display: flex;
 }
 
-.socialmedia > img{
+.socialmedia > a{
   display: inline-block;
   margin-bottom: .5rem;
 }
-.socialmedia > img:hover{
+.socialmedia > a:hover{
   display: inline-block;
   transform: scale(1.15);
   transition: .3s;
@@ -310,3 +315,35 @@ link:visited{
 .studio-gloom-flyer{
   filter: drop-shadow(2px, 2px, 2px, black);
 }
+
+.scroll-left {
+  height: 26px;	
+  overflow: hidden;
+  position: relative;
+  background: #4852ff;
+  color: white;
+ }
+ .scroll-left p {
+     font-size: 1em;
+  position: inline-block;
+  width: fit-content;
+  margin: 0;
+  text-align: center;
+  /* Starting position */
+  transform:translateX(100%);
+  /* Apply animation to this element */
+  animation: scroll-left 15s linear infinite;
+ }
+ /* Move it (define the animation) */
+ @keyframes scroll-left {
+  0%   {
+  transform: translateX(100%); 		
+  }
+  100% {
+  transform: translateX(-100%); 
+  }
+ }
+
+ .scroll-left p a{
+     color: rgb(236, 255, 159);
+ }
